tests/specs/class_static_property.txt
# mod.ts
export class Class {
  static property = "";
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class Class {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   static property = "";
  |   ^

# output.txt
Defined in file:///mod.ts:0:1

class Class

  static property: string


# output.json
[
  {
    "name": "Class",
    "declarations": [
      {
        "location": {
          "filename": "file:///mod.ts",
          "line": 0,
          "col": 0,
          "byteIndex": 0
        },
        "declarationKind": "export",
        "kind": "class",
        "def": {
          "isAbstract": false,
          "constructors": [],
          "properties": [
            {
              "tsType": {
                "repr": "string",
                "kind": "keyword",
                "value": "string"
              },
              "readonly": false,
              "accessibility": null,
              "optional": false,
              "isAbstract": false,
              "isStatic": true,
              "name": "property",
              "location": {
                "filename": "file:///mod.ts",
                "line": 1,
                "col": 2,
                "byteIndex": 23
              }
            }
          ],
          "indexSignatures": [],
          "methods": [],
          "extends": null,
          "implements": [],
          "typeParams": [],
          "superTypeParams": []
        }
      }
    ]
  }
]
